--- a/onlineTest/webApp/templates/index.html
+++ b/onlineTest/webApp/templates/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <title>Sign-Up/Login Form</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
-
-    
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-    
-    
-    
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='header/header.css') }}">
+    <script> 
+      $(function(){
+        $("#header").load("{{ url_for('static', filename='header/header.html') }}");
+      });
+    </script> 
   </head>
 
   <body>
-
+    <div id="header"></div>
     <div class="form">
-      
       <ul class="tab-group">
         <li class="tab active"><a href="#signup">Sign Up</a></li>
         <li class="tab"><a href="#login">Log In</a></li>
