--- a/onlineTest/webApp/templates/login_page_admin.html
+++ b/onlineTest/webApp/templates/login_page_admin.html
@@ -1,25 +1,71 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-</head>
-<body>
-<table align="center" bgcolor="#0091BE">
-<tr>
-<td width="65">Admin id</td>
-<td width="200"><input type="text" name="user" placeholder="ADMIN ID"></td>
-</tr>  
-<tr>
-<td>Password</td>
-<td><input type="password" placeholder="password"></td>
-</tr>
-<tr>
-<td >&nbsp;</td>
-<td> 	
-<input type="submit" name="button" value="Login"></td></tr>
-<td height="21">&nbsp;</td>
-<td align="center"> <a href="#" class="forgot">forgot password? <font color="black"></a></td>
-</tr>
-</table>
-</div>
-</body>
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>Sign-Up/Login Form</title>
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
+    
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+
+    
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    
+    
+    
+  </head>
+
+  <body>
+
+    <div class="form">
+      <ul class="tab-group">
+        <li class="tab active"><a href="#login">log In</a></li>
+      </ul>
+      
+    <div class="tab-content">
+        <div id="login">   
+          <h1>WELCOME ADMIN!</h1>
+          
+          <form action="/" method="post">
+          
+          
+            <div class="field-wrap">
+              <label>
+                First Name<span class="req">*</span>
+              </label>
+              <input type="text" required autocomplete="off" />
+            </div>
+          
+
+          <div class="field-wrap">
+            <label>
+              Email Address<span class="req">*</span>
+            </label>
+            <input type="email"required autocomplete="off"/>
+          </div>
+          
+          <div class="field-wrap">
+            <label>
+              Password<span class="req">*</span>
+            </label>
+            <input type="password"required autocomplete="off"/>
+          </div>
+          
+          <button type="submit" class="button button-block"/>Get Started</button>
+          
+          </form>
+
+        </div>
+        
+      </div><!-- tab-content -->
+      
+</div> <!-- /form -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+
+    
+    
+    
+  </body>
 </html>
