--- a/onlineTest/webApp/templates/login_page_admin.html
+++ b/onlineTest/webApp/templates/login_page_admin.html
@@ -10,9 +10,7 @@
     
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-    
-    
-    
+       
   </head>
 
   <body>
@@ -51,7 +49,7 @@
             <input type="password"required autocomplete="off"/>
           </div>
           
-          <button type="submit" class="button button-block"/>Get Started</button>
+          <button type="submit" class="button button-block"/>Manage System</button>
           
           </form>
 
@@ -62,10 +60,6 @@
 </div> <!-- /form -->
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-
-    
-    
-    
+        <script src="{{ url_for('static', filename='js/index.js') }}"></script>    
   </body>
 </html>
