--- a/onlineTest/webApp/templates/login_page_admin.html
+++ b/onlineTest/webApp/templates/login_page_admin.html
@@ -10,6 +10,9 @@
     
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
+ <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
        
   </head>
 
