--- a/onlineTest/webApp/templates/login_page_admin.html
+++ b/onlineTest/webApp/templates/login_page_admin.html
@@ -4,65 +4,48 @@
     <meta charset="UTF-8">
     <title>Sign-Up/Login Form</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
-
-    
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-        <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-       
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='header/header.css') }}">
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <script> 
+      $(function(){
+        $("#header").load("{{ url_for('static', filename='header/header.html') }}");
+      });
+    </script>    
   </head>
 
   <body>
-
+    <div id="header"></div>
     <div class="form">
-      <ul class="tab-group">
-        <li class="tab active"><a href="#login">log In</a></li>
-      </ul>
-      
-    <div class="tab-content">
+      <div>
         <div id="login">   
           <h1>WELCOME ADMIN!</h1>
-          
           <form action="/" method="post">
-          
-          
             <div class="field-wrap">
               <label>
                 First Name<span class="req">*</span>
               </label>
               <input type="text" required autocomplete="off" />
             </div>
-          
-
           <div class="field-wrap">
             <label>
               Email Address<span class="req">*</span>
             </label>
             <input type="email"required autocomplete="off"/>
-          </div>
-          
+          </div>         
           <div class="field-wrap">
             <label>
               Password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
           </div>
-          
-          <button type="submit" class="button button-block"/>Manage System</button>
-          
+          <button type="submit" class="button button-block"/>Manage System</button>  
           </form>
-
         </div>
         
       </div><!-- tab-content -->
-      
-</div> <!-- /form -->
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-        <script src="{{ url_for('static', filename='js/index.js') }}"></script>    
+  </div> <!-- /form --> 
   </body>
 </html>
