--- a/onlineTest/webApp/templates/dashboard_admin.html
+++ b/onlineTest/webApp/templates/dashboard_admin.html
@@ -1,56 +1,57 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html >
-  <head><style>
-  	
-h1 {text-align:justify-all,text-center;}
-ul {text-align:justify-all,text-center;}
-</style>
+  <head>
     <meta charset="UTF-8">
-    <title>WELCOME</title>
+    <title>WELCOME ADMIN</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
-
-    
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
-       
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='header/header.css') }}">
+    <script> 
+      $(function(){
+        $("#header").load("{{ url_for('static', filename='header/header.html') }}");
+      });
+    </script> 
   </head>
 
 
 
- <body class="sticky-header left-side-collapsed"  onload="initMap()">
+ <body>
 
-    <section>
-     
+
+     	<div id="header"></div>
 		<div class="left-side sticky-left-side">
 
-			<div class="logo">
-				<h1><a href="dashboard_student.html">WELCOME ADMIN <span></span></a></h1>
-
-				<img src="https://www.google.co.in/imgres?imgurl=https%3A%2F%2Fwww.felight.com%2Fwp-content%2Fuploads%2F2014%2F12%2FNew-logo-purple-24.png&imgrefurl=https%3A%2F%2Fwww.felight.com%2F&docid=eEOQZePhOLwyeM&tbnid=pgxN4p8o4MWVAM%3A&w=307&h=264&client=firefox-b-ab&bih=667&biw=1366&ved=0ahUKEwit2OizjrLPAhWIu48KHUwABnYQMwgdKAAwAA&iact=mrc&uact=8" alt="felight Test"style="width=304px;height:228px;">
+			<div class="form">
+				<h1><a href="#">WELCOME ADMIN <span></span></a></h1>	
 			</div>
-			<div class="logo-icon text-center">
-				<a href="dashboard_student.html"><i class="lnr lnr-home"></i> </a>
-			</div>
+	<form action="/" method="post">
+	 <p class="paragraph">
+		<div class="tab-content">
+		<table>
+			<tr>
+			<td>Name :</td>
+			<td><output type="text" name="user" placeholder="user name" size="79"/>ADMIN ONE<!-- <name> --> </td>
+			</tr>
+			<tr>
+			<td>Email :</td>
+			<td><output type="text" name="Email" placeholder="Email Address" size="79"/>ADMIN@PORTAL.COM</td>
+			</tr>
+			
+			</table>
 
-			<div class="left-side-inner">
-
-					<ul class="nav nav-pills nav-stacked custom-nav">
+		</div>
+	</p>
+		<table >
+			<li class="menu-list">
+					<ul class="sub-menu-list">
+						<li><a href="#">CREATE TEST</a> </li>
+						<li><a href="#">PREVIOUS TEST</a></li>
+						<li><a href="#">STUDENTS PROFILE</a></li>
+					</ul>
+			</li>
 						
-						<li class="menu-list">
-							<a href="#"><i class="lnr lnr-cog"></i>
-
-
-								</a>
-								<ul class="sub-menu-list">
-									<li><a href="#">CREATE TEST</a> </li>
-									<li><a href="#">PREVIOUS TEST</a></li>
-									<li><a href="#">STUDENTS PROFILE</a></li>
-								</ul>
-						</li>
-						
-						
-   </section>
+		</table>
+	</form>				
 </body>
