--- a/onlineTest/webApp/templates/dashboard_student.html
+++ b/onlineTest/webApp/templates/dashboard_student.html
@@ -25,7 +25,7 @@
 		<div class="tab-content">
 			<tr>
 			<td>Name :</td>
-			<td><output type="text" name="user" size="79"/>STUDENT ONE<!-- <name> --> </td>
+			<td><output type="text" name="user" size="79"/>{{name}} </td>
 			</tr>
 			<tr>
 			<td>Email :</td>
@@ -39,7 +39,7 @@
 			<td>&nbsp;</td>
 			<tr>
 			<td>Remarks :</td>
-			<td><output type="text" name="Remarks" size="79"/>THIS THE REMARK FOR STUDENT ONE WITH MAIL ID STUDENT@PORTAL.COM</td>
+			<td><output type="text" name="Remarks" size="79"/></td>
 			</tr>
 			
 			<td>&nbsp;</td>
