--- a/onlineTest/webApp/templates/login_page_admin.html
+++ b/onlineTest/webApp/templates/login_page_admin.html
@@ -27,7 +27,7 @@
               <label>
                 Name<span class="req">*</span>
               </label>
-              <input type="text" name= "name" required autocomplete="off" />
+              <input type="text" name= "name" required />
             </div>
           <div class="field-wrap">
             <label>
