--- a/onlineTest/webApp/templates/login_page_student.html
+++ b/onlineTest/webApp/templates/login_page_student.html
@@ -68,7 +68,7 @@
         <div id="login">   
           <h1>Welcome Back!</h1>
           
-          <form action="/" method="post">
+          <form action="http://localhost:5000/dashboard-student" method="POST">
           
             <div class="field-wrap">
             <label>
