--- a/onlineTest/webApp/templates/dashboard_student.html
+++ b/onlineTest/webApp/templates/dashboard_student.html
@@ -20,16 +20,16 @@
   <form action="/" method="post">
 	<table>
 		<div class="form">
-			<h1 align="center">WELCOME <!-- <name> --> </h1>
+			<h1 align="center">WELCOME!</h1>
   <p class="paragraph">
 		<div class="tab-content">
 			<tr>
 			<td>Name :</td>
-			<td><output type="text" name="user" size="79"/>{{name}} </td>
+			<td><output type="text" name="user" size="79"/></td>
 			</tr>
 			<tr>
 			<td>Email :</td>
-			<td><output type="text" name="Email" size="79"/>STUDENT@PORTAL.COM<!-- <email> --> </td>
+			<td><output type="text" name="Email" size="79"/>{{email}}</td>
 			</tr>
 			<tr>
 			<td>Test :</td>
