--- a/onlineTest/webApp/static/sidebar/sidebar.css
+++ b/onlineTest/webApp/static/sidebar/sidebar.css
@@ -21,6 +21,7 @@ overflow:visible;
 }
 
 .main-menu {
+	margin-top: 100px;
 background:#fbfbfb;
 border-right:1px solid #e5e5e5;
 position:absolute;
