--- a/onlineTest/webApp/templates/login_page_admin.html
+++ b/onlineTest/webApp/templates/login_page_admin.html
@@ -2,9 +2,10 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Sign-Up/Login Form</title>
+    <title>Login</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='header/header.css') }}">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
